[package]
name = "minesweeper"
version = "0.1.0"
authors = ["frellica <glbrt.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
bevy = { version = "0.4.0", default-features = false, features = ["bevy_gilrs", "bevy_gltf", "bevy_winit", "render", "png", "hdr"] }
bevy_webgl2 = "0.4.3"

# Enable only a small amount of optimization:
[profile.dev]
opt-level = 1

# Enable optimizations for dependencies (incl. Bevy),
# but not for our own code:
[profile.dev.package."*"]
opt-level = 3